--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\LENOVO\AppData\Local\Temp\testng-eclipse--704766699\testng-customsuite.xml</span>
+                    <span>C:\Users\LENOVO\AppData\Local\Temp\testng-eclipse-1272108134\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.LoginTest" class="method navigator-link" hash-for-method="LoginFunc(admin1, useradmin)">LoginFunc(admin1, useradmin)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tests.LoginTest" class="method navigator-link" hash-for-method="LoginFunc(admin, useadmin1)">LoginFunc(admin, useadmin1)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -113,7 +113,12 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.LoginTest" class="method navigator-link" hash-for-method="LoginFunc(admin, useradmin1)">LoginFunc(admin, useradmin1)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tests.LoginTest" class="method navigator-link" hash-for-method="LoginFunc(admina, useradmina)">LoginFunc(admina, useradmina)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="tests.LoginTest" class="method navigator-link" hash-for-method="LoginFunc(admin1, useradmin)">LoginFunc(admin1, useradmin)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -136,10 +141,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="LoginFunc(admin1, useradmin)">
-                  </a> <!-- LoginFunc(admin1, useradmin) -->
+                  <a name="LoginFunc(admin, useadmin1)">
+                  </a> <!-- LoginFunc(admin, useadmin1) -->
                   <span class="method-name">LoginFunc</span>
-                  <span class="parameters">(admin1,useradmin)</span>
+                  <span class="parameters">(admin,useadmin1)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -152,10 +157,18 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="LoginFunc(admin, useradmin1)">
-                  </a> <!-- LoginFunc(admin, useradmin1) -->
+                  <a name="LoginFunc(admina, useradmina)">
+                  </a> <!-- LoginFunc(admina, useradmina) -->
                   <span class="method-name">LoginFunc</span>
-                  <span class="parameters">(admin,useradmin1)</span>
+                  <span class="parameters">(admina,useradmina)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="LoginFunc(admin1, useradmin)">
+                  </a> <!-- LoginFunc(admin1, useradmin) -->
+                  <span class="method-name">LoginFunc</span>
+                  <span class="parameters">(admin1,useradmin)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -163,7 +176,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\LENOVO\AppData\Local\Temp\testng-eclipse--704766699\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\LENOVO\AppData\Local\Temp\testng-eclipse-1272108134\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -212,24 +225,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'LoginFunc')
 data.setCell(0, 2, 'tests.LoginTest')
-data.setCell(0, 3, 4752);
+data.setCell(0, 3, 9029);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'LoginFunc')
 data.setCell(1, 2, 'tests.LoginTest')
-data.setCell(1, 3, 2278);
+data.setCell(1, 3, 4027);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'LoginFunc')
 data.setCell(2, 2, 'tests.LoginTest')
-data.setCell(2, 3, 1578);
+data.setCell(2, 3, 1972);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'LoginFunc')
+data.setCell(3, 2, 'tests.LoginTest')
+data.setCell(3, 3, 1905);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 16 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -261,36 +278,48 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">LoginFunc(admin, useradmin1)</span>
-                <span class="method-start">10900 ms</span>
+                <span class="method-name">LoginFunc(admin1, useradmin)</span>
+                <span class="method-start">23989 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">13278 ms</span>
+                <span class="method-start">28030 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">13869 ms</span>
+                <span class="method-start">28788 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">LoginFunc(admin1, useradmin)</span>
-                <span class="method-start">17236 ms</span>
+                <span class="method-name">LoginFunc(admin, useadmin1)</span>
+                <span class="method-start">33477 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">18823 ms</span>
+                <span class="method-start">35457 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">19269 ms</span>
+                <span class="method-start">35872 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">LoginFunc(admina, useradmina)</span>
+                <span class="method-start">40831 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">42742 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">43247 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">LoginFunc(admin, useradmin)</span>
-                <span class="method-start">22738 ms</span>
+                <span class="method-start">45479 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">27492 ms</span>
+                <span class="method-start">54513 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
