--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\LENOVO\AppData\Local\Temp\testng-eclipse-2117687710\testng-customsuite.xml</span>
+                    <span>C:\Users\LENOVO\AppData\Local\Temp\testng-eclipse--1377963980\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,22 +103,27 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.LoginTest" class="method navigator-link" hash-for-method="LoginFunc(admin, useadmin1)">LoginFunc(admin, useadmin1)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tests.UserRegistrationTest" class="method navigator-link" hash-for-method="adduser(Sujith123, css, sujith@gmail.com, 123456.0, jith, userjith, userjith, admin, useradmin)">adduser(Sujith123, css, sujith@gmail.com, 123456.0, jith, userjith, userjith, admin, useradmin)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.LoginTest" class="method navigator-link" hash-for-method="LoginFunc(admin, useradmin)">LoginFunc(admin, useradmin)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tests.UserRegistrationTest" class="method navigator-link" hash-for-method="adduser(Sujith456, cs123, sujith@gmail.com, 1234566.0, jith1, userjith, userjith, admin, useradmin)">adduser(Sujith456, cs123, sujith@gmail.com, 1234566.0, jith1, userjith, userjith, admin, useradmin)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.LoginTest" class="method navigator-link" hash-for-method="LoginFunc(admin1, useradmin)">LoginFunc(admin1, useradmin)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tests.UserRegistrationTest" class="method navigator-link" hash-for-method="adminlogin">adminlogin</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.LoginTest" class="method navigator-link" hash-for-method="LoginFunc(admina, useradmina)">LoginFunc(admina, useradmina)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tests.UserRegistrationTest" class="method navigator-link" hash-for-method="verifyUser(Sujith123, css, sujith@gmail.com, 123456.0, jith, userjith, userjith, admin, useradmin)">verifyUser(Sujith123, css, sujith@gmail.com, 123456.0, jith, userjith, userjith, admin, useradmin)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="tests.UserRegistrationTest" class="method navigator-link" hash-for-method="verifyUser(Sujith456, cs123, sujith@gmail.com, 1234566.0, jith1, userjith, userjith, admin, useradmin)">verifyUser(Sujith456, cs123, sujith@gmail.com, 1234566.0, jith1, userjith, userjith, admin, useradmin)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -136,39 +141,46 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">tests.LoginTest</span>
+              <span class="class-name">tests.UserRegistrationTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="LoginFunc(admin, useadmin1)">
-                  </a> <!-- LoginFunc(admin, useadmin1) -->
-                  <span class="method-name">LoginFunc</span>
-                  <span class="parameters">(admin,useadmin1)</span>
+                  <a name="adduser(Sujith123, css, sujith@gmail.com, 123456.0, jith, userjith, userjith, admin, useradmin)">
+                  </a> <!-- adduser(Sujith123, css, sujith@gmail.com, 123456.0, jith, userjith, userjith, admin, useradmin) -->
+                  <span class="method-name">adduser</span>
+                  <span class="parameters">(Sujith123,css,sujith@gmail.com,123456.0,jith,userjith,userjith,admin,useradmin)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="LoginFunc(admin, useradmin)">
-                  </a> <!-- LoginFunc(admin, useradmin) -->
-                  <span class="method-name">LoginFunc</span>
-                  <span class="parameters">(admin,useradmin)</span>
+                  <a name="adduser(Sujith456, cs123, sujith@gmail.com, 1234566.0, jith1, userjith, userjith, admin, useradmin)">
+                  </a> <!-- adduser(Sujith456, cs123, sujith@gmail.com, 1234566.0, jith1, userjith, userjith, admin, useradmin) -->
+                  <span class="method-name">adduser</span>
+                  <span class="parameters">(Sujith456,cs123,sujith@gmail.com,1234566.0,jith1,userjith,userjith,admin,useradmin)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="LoginFunc(admin1, useradmin)">
-                  </a> <!-- LoginFunc(admin1, useradmin) -->
-                  <span class="method-name">LoginFunc</span>
-                  <span class="parameters">(admin1,useradmin)</span>
+                  <a name="adminlogin">
+                  </a> <!-- adminlogin -->
+                  <span class="method-name">adminlogin</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="LoginFunc(admina, useradmina)">
-                  </a> <!-- LoginFunc(admina, useradmina) -->
-                  <span class="method-name">LoginFunc</span>
-                  <span class="parameters">(admina,useradmina)</span>
+                  <a name="verifyUser(Sujith123, css, sujith@gmail.com, 123456.0, jith, userjith, userjith, admin, useradmin)">
+                  </a> <!-- verifyUser(Sujith123, css, sujith@gmail.com, 123456.0, jith, userjith, userjith, admin, useradmin) -->
+                  <span class="method-name">verifyUser</span>
+                  <span class="parameters">(Sujith123,css,sujith@gmail.com,123456.0,jith,userjith,userjith,admin,useradmin)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyUser(Sujith456, cs123, sujith@gmail.com, 1234566.0, jith1, userjith, userjith, admin, useradmin)">
+                  </a> <!-- verifyUser(Sujith456, cs123, sujith@gmail.com, 1234566.0, jith1, userjith, userjith, admin, useradmin) -->
+                  <span class="method-name">verifyUser</span>
+                  <span class="parameters">(Sujith456,cs123,sujith@gmail.com,1234566.0,jith1,userjith,userjith,admin,useradmin)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -176,7 +188,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\LENOVO\AppData\Local\Temp\testng-eclipse-2117687710\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\LENOVO\AppData\Local\Temp\testng-eclipse--1377963980\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -185,7 +197,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tests.LoginTest&quot;/&gt;
+      &lt;class name=&quot;tests.UserRegistrationTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -225,28 +237,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'LoginFunc')
-data.setCell(0, 2, 'tests.LoginTest')
-data.setCell(0, 3, 7177);
+data.setCell(0, 1, 'adduser')
+data.setCell(0, 2, 'tests.UserRegistrationTest')
+data.setCell(0, 3, 6791);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'LoginFunc')
-data.setCell(1, 2, 'tests.LoginTest')
-data.setCell(1, 3, 4257);
+data.setCell(1, 1, 'adduser')
+data.setCell(1, 2, 'tests.UserRegistrationTest')
+data.setCell(1, 3, 6768);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'LoginFunc')
-data.setCell(2, 2, 'tests.LoginTest')
-data.setCell(2, 3, 3380);
+data.setCell(2, 1, 'verifyUser')
+data.setCell(2, 2, 'tests.UserRegistrationTest')
+data.setCell(2, 3, 4038);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'LoginFunc')
-data.setCell(3, 2, 'tests.LoginTest')
-data.setCell(3, 3, 2186);
+data.setCell(3, 1, 'verifyUser')
+data.setCell(3, 2, 'tests.UserRegistrationTest')
+data.setCell(3, 3, 3941);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'adminlogin')
+data.setCell(4, 2, 'tests.UserRegistrationTest')
+data.setCell(4, 3, 1254);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 17 seconds</span>
+              <span class="suite-total-time">Total running time: 22 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -272,55 +288,35 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.LoginTest</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
+              <div class="chronological-class-name">tests.UserRegistrationTest</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-method before -->
+              </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">LoginFunc(admin1, useradmin)</span>
-                <span class="method-start">22665 ms</span>
+                <span class="method-name">adminlogin</span>
+                <span class="method-start">4986 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">26054 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">27219 ms</span>
-              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">LoginFunc(admin, useadmin1)</span>
-                <span class="method-start">30618 ms</span>
+                <span class="method-name">adduser(Sujith123, css, sujith@gmail.com, 123456.0, jith, userjith, userjith, admin, useradmin)</span>
+                <span class="method-start">9553 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">34887 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">35304 ms</span>
-              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">LoginFunc(admina, useradmina)</span>
-                <span class="method-start">39129 ms</span>
+                <span class="method-name">adduser(Sujith456, cs123, sujith@gmail.com, 1234566.0, jith1, userjith, userjith, admin, useradmin)</span>
+                <span class="method-start">16369 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">41323 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">42210 ms</span>
-              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">LoginFunc(admin, useradmin)</span>
-                <span class="method-start">45812 ms</span>
+                <span class="method-name">verifyUser(Sujith123, css, sujith@gmail.com, 123456.0, jith, userjith, userjith, admin, useradmin)</span>
+                <span class="method-start">23508 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
+              <div class="test-method">
+                <span class="method-name">verifyUser(Sujith456, cs123, sujith@gmail.com, 1234566.0, jith1, userjith, userjith, admin, useradmin)</span>
+                <span class="method-start">27521 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">53004 ms</span>
-              </div> <!-- configuration-method after -->
+                <span class="method-start">31595 ms</span>
+              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
