regression suite configured to run the user details delete and take the screen shot on the test failure. The @Tests configured under the groups (reggrsn1) are only made to execute in this test suite.

--- a/test-output/html/suites_overview.html
+++ b/test-output/html/suites_overview.html
@@ -26,7 +26,8 @@
 <br>
 	<div class="well well-large">
 		<div class="suite" id="Suite">Suite 
-		        </div>
+				/ <a href="suite1_groups.html">Groups</a>
+                </div>
  	<table class="table table-bordered" id="Suite">
   		 		<thead>
 	  		<tr class="columnHeadings">
@@ -42,14 +43,14 @@
  		<tbody>
  			
   					  	  			<tr class="test">
-  				<td width="100">9:12:55 PM</td>
-    			    				<td><a href="suite1_test1_results.html">screenshot</a></td>
-    			    			    			<td class="duration">00:00:18</td>
+  				<td width="100">10:17:48 AM</td>
+    			    				<td><a href="suite1_test1_results.html">reggression</a></td>
+    			    			    			<td class="duration">00:00:13</td>
     			    			<td class="passed number">1</td>
     			    			    			<td class="zero number">0</td>
-    			    			    			    			<td class="failed number">3</td>
+    			    			    			    			<td class="failed number">2</td>
     			    			<td class="passRate">
-      				      					25%
+      				      					33%
       				    			</td>
   			</tr>
   		  	  	
@@ -57,12 +58,12 @@
     <tr class="suite">
     <td colspan="1" class="totalLabel">Total</td>
     <td class="totalLabel"></td>
-    	<td class="totalLabel">00:00:22</td>
+    	<td class="totalLabel">00:00:15</td>
         <td class="passed number">1</td>
             <td class="zero number">0</td>
-     	        <td class="failed number">3</td>
+     	        <td class="failed number">2</td>
         <td class="passRate suite">
-            25%
+            33%
           </td>
   </tr>
  </table>
