--- a/test-output/html/newIssues.html
+++ b/test-output/html/newIssues.html
@@ -45,19 +45,11 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr class="parent" id="row0" title="Click to expand/collapse" style="cursor: pointer;" onclick="changeIcon('span-da9b6474-b1a3-4464-b846-b389a52fce07'); ">
-<td><span id="span-da9b6474-b1a3-4464-b846-b389a52fce07" class="glyphicon glyphicon-minus" style="color:blue"></span></td>
-<td class="break-word">no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//a[@href=&apos;../../index.jsp&apos;]&quot;}
-  (Session info: chrome=136.0.7103.114)
-For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
-Build info: version: &apos;4.31.0&apos;, revision: &apos;1ef9f18787*&apos;
-System info: os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.13&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [593a7f7cd0e853f448b89ebc063295d3, findElement {value=//a[@href=&apos;../../index.jsp&apos;], using=xpath}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 136.0.7103.114, chrome: {chromedriverVersion: 136.0.7103.94 (fa0be0b33deb..., userDataDir: C:\Users\LENOVO\AppData\Loc...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:57662}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:57662/devtoo..., se:cdpVersion: 136.0.7103.114, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: 593a7f7cd0e853f448b89ebc063295d3</td><td>3</td><td></td></tr><tr class="child-row0" style="display: table-row;"><td></td><td><i>Suite Name</i></td><td><i>Test Name</i></td><td><i>Class Name</i></td></tr><tr class="child-row0" style="display: table-row;"><td></td><td><a href="suites_overview.html#Suite">Suite</a></td><td><a href="suite1_test1_results.html">screenshot</a></td><td class="break-word">tests.LoginTest</td></tr>
-<tr class="child-row0" style="display: table-row;"><td></td><td><a href="suites_overview.html#Suite">Suite</a></td><td><a href="suite1_test1_results.html">screenshot</a></td><td class="break-word">tests.LoginTest</td></tr>
-<tr class="child-row0" style="display: table-row;"><td></td><td><a href="suites_overview.html#Suite">Suite</a></td><td><a href="suite1_test1_results.html">screenshot</a></td><td class="break-word">tests.LoginTest</td></tr>
+				<tr class="parent" id="row0" title="Click to expand/collapse" style="cursor: pointer;" onclick="changeIcon('span-0c3686ab-987f-4602-a22b-e0de05102a3b'); ">
+<td><span id="span-0c3686ab-987f-4602-a22b-e0de05102a3b" class="glyphicon glyphicon-minus" style="color:blue"></span></td>
+<td class="break-word">The following asserts failed:
+	Soft assert failed expected [hai] but found [haia]</td><td>2</td><td></td></tr><tr class="child-row0" style="display: table-row;"><td></td><td><i>Suite Name</i></td><td><i>Test Name</i></td><td><i>Class Name</i></td></tr><tr class="child-row0" style="display: table-row;"><td></td><td><a href="suites_overview.html#Suite">Suite</a></td><td><a href="suite1_test1_results.html">reggression</a></td><td class="break-word">tests.UserRegistrationTest</td></tr>
+<tr class="child-row0" style="display: table-row;"><td></td><td><a href="suites_overview.html#Suite">Suite</a></td><td><a href="suite1_test1_results.html">reggression</a></td><td class="break-word">tests.UserRegistrationTest</td></tr>
 
 			</tbody>
 		</table>
