--- a/test-output/html/packages.html
+++ b/test-output/html/packages.html
@@ -55,10 +55,10 @@
 	    	  		</tr>
   	</thead>
   	<tbody>
-  		<tr class="parent" id="row0" title="Click to expand/collapse" style="cursor: pointer;" onclick="changeIcon('span-c647a5af-48a9-46e3-8e33-9bdce4ea2617'); ">
-<td><span id="span-c647a5af-48a9-46e3-8e33-9bdce4ea2617" class="glyphicon glyphicon-minus" style="color:blue"></span></td>
-<td align="left">tests</td><td align="center">00:00:22</td><td align="center" class="passed number">1</td><td align="center" class="zero number">0</td><td align="center" class="failed number">3</td></tr>
-<tr class="child-row0" style="display: table-row;"><td></td><td><a href="suite1_test1_results.html">tests.LoginTest</a></td><td align="center">00:00:22</td><td align="center" class="passedCell">1</td><td align="center" class="zero number">0</td><td align="center" class="failedCell">3</td>
+  		<tr class="parent" id="row0" title="Click to expand/collapse" style="cursor: pointer;" onclick="changeIcon('span-9a9df7ef-03eb-4025-b15f-51b75cfe0253'); ">
+<td><span id="span-9a9df7ef-03eb-4025-b15f-51b75cfe0253" class="glyphicon glyphicon-minus" style="color:blue"></span></td>
+<td align="left">tests</td><td align="center">00:00:15</td><td align="center" class="passed number">2</td><td align="center" class="zero number">0</td><td align="center" class="failed number">4</td></tr>
+<tr class="child-row0" style="display: table-row;"><td></td><td><a href="suite1_test1_results.html">tests.LoginTest</a></td><td align="center">00:00:15</td><td align="center" class="passedCell">1</td><td align="center" class="zero number">0</td><td align="center" class="failedCell">2</td><tr class="child-row0" style="display: table-row;"><td></td><td><a href="suite1_test2_results.html">tests.UserRegistrationTest</a></td><td align="center">00:00:15</td><td align="center" class="passedCell">1</td><td align="center" class="zero number">0</td><td align="center" class="failedCell">2</td>
 
   	</tbody>
 </table>
