--- a/test-output/html/suite1_groups.html
+++ b/test-output/html/suite1_groups.html
@@ -15,10 +15,7 @@
       <td class="group">reggrsn1</td>
     </tr>
         <tr>
-      <td>tests.UserRegistrationTest.<b>adminlogin</b></td>    
-    </tr>
-        <tr>
-      <td>tests.UserRegistrationTest.<b>verifyUser</b></td>    
+      <td>tests.LoginTest.<b>LoginFunc</b></td>    
     </tr>
         </table>
 </body>
