--- a/test-output/html/suites_overview.html
+++ b/test-output/html/suites_overview.html
@@ -43,14 +43,14 @@
  		<tbody>
  			
   					  	  			<tr class="test">
-  				<td width="100">10:17:48 AM</td>
-    			    				<td><a href="suite1_test1_results.html">reggression</a></td>
-    			    			    			<td class="duration">00:00:13</td>
+  				<td width="100">9:17:17 AM</td>
+    			    				<td><a href="suite1_test1_results.html">screenshot</a></td>
+    			    			    			<td class="duration">00:00:17</td>
     			    			<td class="passed number">1</td>
     			    			    			<td class="zero number">0</td>
-    			    			    			    			<td class="failed number">2</td>
+    			    			    			    			<td class="failed number">3</td>
     			    			<td class="passRate">
-      				      					33%
+      				      					25%
       				    			</td>
   			</tr>
   		  	  	
@@ -58,12 +58,12 @@
     <tr class="suite">
     <td colspan="1" class="totalLabel">Total</td>
     <td class="totalLabel"></td>
-    	<td class="totalLabel">00:00:15</td>
+    	<td class="totalLabel">00:00:20</td>
         <td class="passed number">1</td>
             <td class="zero number">0</td>
-     	        <td class="failed number">2</td>
+     	        <td class="failed number">3</td>
         <td class="passRate suite">
-            33%
+            25%
           </td>
   </tr>
  </table>
