--- a/test-output/html/groupsresults.html
+++ b/test-output/html/groupsresults.html
@@ -55,10 +55,10 @@
 	    	  		</tr>
   	</thead>
   	<tbody>
-  		<tr class="parent" id="row0" title="Click to expand/collapse" style="cursor: pointer;" onclick="changeIcon('span-ba651d46-5ac2-4143-ab87-3ed5d1e53dae'); ">
-<td><span id="span-ba651d46-5ac2-4143-ab87-3ed5d1e53dae" class="glyphicon glyphicon-minus" style="color:blue"></span></td>
-<td align="left">reggrsn1</td><td align="center">00:00:00</td><td align="center" class="passed number">1</td><td align="center" class="zero number">0</td><td align="center" class="failed number">2</td></tr>
-<tr class="child-row0" style="display: table-row;"><td></td><td><a href="suite1_test1_results.html">tests.UserRegistrationTest</a></td><td align="center">00:00:15</td><td align="center" class="passedCell">1</td><td align="center" class="zero number">0</td><td align="center" class="failedCell">2</td>
+  		<tr class="parent" id="row0" title="Click to expand/collapse" style="cursor: pointer;" onclick="changeIcon('span-4d12b77e-1fa5-401f-aaa4-93a4a631c453'); ">
+<td><span id="span-4d12b77e-1fa5-401f-aaa4-93a4a631c453" class="glyphicon glyphicon-minus" style="color:blue"></span></td>
+<td align="left">reggrsn1</td><td align="center">00:00:00</td><td align="center" class="passed number">1</td><td align="center" class="zero number">0</td><td align="center" class="failed number">3</td></tr>
+<tr class="child-row0" style="display: table-row;"><td></td><td><a href="suite1_test1_results.html">tests.LoginTest</a></td><td align="center">00:00:20</td><td align="center" class="passedCell">1</td><td align="center" class="zero number">0</td><td align="center" class="failedCell">3</td>
 
   	</tbody>
 </table>
